--- a/src/app/pages/new-game/generate-setup/generate-setup.page.html
+++ b/src/app/pages/new-game/generate-setup/generate-setup.page.html
@@ -18,20 +18,19 @@
         <ng-container *ngIf="num <= setup.numPlayers">
           <ion-item>
             <ion-label>
-              <span [innerHtml]="'player.' + num | translate:{ name: setup.playerNames[playerOrder[num - 1] - 1]}"></span>
+              <ion-text color="medium"><strong [innerHtml]="'player.' + num | translate"></strong></ion-text>
+              <ion-text> {{setup.playerNames[playerOrder[num - 1] - 1]}}</ion-text>
             </ion-label>
           </ion-item>
-          <ion-row *ngIf="setup.factionSelectMode === 'faction-select-mode.two-alternatives'">
-            <ion-col>
-              <ion-label translate>factions-choose</ion-label>
-            </ion-col>
-            <ion-col *ngFor="let faction of pickedFactionsTwoAlternatives[num]">
-              <ion-item>
-                <ion-icon name="body-outline"></ion-icon>
-                <ion-label translate>{{faction.name}}</ion-label>
-              </ion-item>
-            </ion-col>
-          </ion-row>
+          <div class="single-line" *ngIf="setup.factionSelectMode === 'faction-select-mode.two-alternatives'">
+            <ion-item>
+              <ion-label color="medium"><strong translate>factions-choose</strong></ion-label>
+            </ion-item>
+            <ion-item *ngFor="let faction of pickedFactionsTwoAlternatives[num - 1]">
+              <ion-icon name="body-outline"></ion-icon>
+              <ion-label translate>{{faction.name}}</ion-label>
+            </ion-item>
+          </div>
         </ng-container>
       </ng-container>
     </ion-item-group>
@@ -58,7 +57,7 @@
         <ion-col *ngFor="let bonusCard of pickedBonusCards">
           <ion-item>
             <ion-icon name="ribbon-outline"></ion-icon>
-            <ion-label translate>{{bonusCard.description}}</ion-label>
+            <ion-label [innerHtml]="bonusCard.description | translate"></ion-label>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -70,7 +69,7 @@
       </ion-item-divider>
       <ion-row *ngFor="let scoringTile of pickedScoringTiles; let i = index">
         <ion-col size="auto">
-          <ion-label translate [translateParams]="{ num: i }">round-num</ion-label>
+          <ion-label color="medium"><strong translate [translateParams]="{ num: i }">round-num</strong></ion-label>
         </ion-col>
         <ion-col>
           <ion-item>
