--- a/src/app/pages/new-game/generate-setup/generate-setup.page.html
+++ b/src/app/pages/new-game/generate-setup/generate-setup.page.html
@@ -23,7 +23,7 @@
             </ion-label>
           </ion-item>
           <div class="single-line" *ngIf="setup.factionSelectMode === 'faction-select-mode.two-alternatives'">
-            <ion-item>
+            <ion-item lines="none">
               <ion-label color="medium"><strong translate>factions-choose</strong></ion-label>
             </ion-item>
             <ion-item *ngFor="let faction of pickedFactionsTwoAlternatives[num - 1]">
