Clear unused code

--- a/src/app/pages/new-game/new-game.page.html
+++ b/src/app/pages/new-game/new-game.page.html
@@ -43,7 +43,7 @@
         <ng-container *ngFor="let num of [1, 2, 3, 4, 5]">
           <ion-item *ngIf="num <= setup.numPlayers">
             <ion-label translate [translateParams]="{ num: num }" class="ion-padding-end">name-of-player</ion-label>
-            <ion-input name="{{'playerName' + num}}" [(ngModel)]="setup.playerNames[num - 1]" (ionBlur)="fillMissingPlayerNames()">
+            <ion-input name="{{'playerName' + num}}" [(ngModel)]="setup.playerNames[num - 1]" (ionBlur)="onPlayerNameChange()">
             </ion-input>
           </ion-item>
         </ng-container>
