--- a/src/app/pages/new-game/new-game.page.html
+++ b/src/app/pages/new-game/new-game.page.html
@@ -8,168 +8,22 @@
 </ion-header>
 
 <ion-content fullscreen>
-
   <ion-list>
     <ion-item>
       <div>
         <ion-label translate>profile</ion-label>
-        <ion-note>{{baseProfile.predefined ? (baseProfile.name | translate) : baseProfile.name}}
-        </ion-note>
+        <ion-note>{{profile.predefined ? (profile.name | translate) : profile.name}}</ion-note>
       </div>
-      <ion-select [(ngModel)]="baseProfile" (ionChange)="onProfileChange()" slot="end"
-        [interfaceOptions]="{ cssClass: 'wide-select' }">
-        <ion-select-option *ngFor="let profile of allProfiles" [value]="profile">
-          {{profile.predefined ? (profile.name | translate) : profile.name}}
+      <ion-select [(ngModel)]="profile" slot="end" [interfaceOptions]="{ cssClass: 'wide-select' }">
+        <ion-select-option *ngFor="let p of allProfiles" [value]="p">
+          {{p.predefined ? (p.name | translate) : p.name}}
         </ion-select-option>
       </ion-select>
     </ion-item>
-
     <form #form="ngForm">
-      <ion-item-group>
-        <ion-item-divider>
-          <ion-label translate>players</ion-label>
-        </ion-item-divider>
-        <ion-radio-group name="numPlayers" [(ngModel)]="setup.numPlayers" (ionChange)="onNumPlayersChange()">
-          <ion-item lines="none">
-            <ion-label style="min-width: 140px;" translate>number-of-players</ion-label>
-            <div class="single-line">
-              <ion-item *ngFor="let num of [2, 3, 4, 5]">
-                <ion-label>{{num}}</ion-label>
-                <ion-radio slot="start" [value]="num"></ion-radio>
-              </ion-item>
-            </div>
-          </ion-item>
-        </ion-radio-group>
-        <ng-container *ngFor="let num of [1, 2, 3, 4, 5]">
-          <ion-item *ngIf="num <= setup.numPlayers">
-            <ion-label translate [translateParams]="{ num: num }" class="ion-padding-end">name-of-player</ion-label>
-            <ion-input name="{{'playerName' + num}}" [(ngModel)]="setup.playerNames[num - 1]" (ionBlur)="onPlayerNameChange()">
-            </ion-input>
-          </ion-item>
-        </ng-container>
-      </ion-item-group>
-
-      <ion-item-group>
-        <ion-item-divider>
-          <ion-label translate>setup</ion-label>
-        </ion-item-divider>
-
-        <ion-radio-group name="factionSelectMode" [(ngModel)]="setup.factionSelectMode">
-          <ion-item lines="none">
-            <ion-label style="min-width: 140px;" translate>faction-select-mode</ion-label>
-            <div class="single-line">
-              <ion-item>
-                <ion-label translate>faction-select-mode.bid</ion-label>
-                <ion-radio slot="start" value="faction-select-mode.bid"></ion-radio>
-              </ion-item>
-              <ion-item>
-                <ion-label translate>faction-select-mode.two-alternatives</ion-label>
-                <ion-radio slot="start" value="faction-select-mode.two-alternatives"></ion-radio>
-              </ion-item>
-            </div>
-          </ion-item>
-        </ion-radio-group>
-
-        <ion-item routerLink="factions">
-          <div>
-            <ion-label translate>factions</ion-label>
-            <ion-note translate [translateParams]="{ num: setup.factions.length }">factions-description</ion-note>
-          </div>
-          <input type="hidden" name="factions" [(ngModel)]="setup.factions" appFactionsValidator
-            [numPlayers]="setup.numPlayers" #factionsSelect="ngModel">
-        </ion-item>
-        <div class="ion-padding-horizontal">
-          <ion-text *ngIf="factionsSelect.errors?.invalidFactions" color="danger" translate>factions-invalid
-          </ion-text>
-        </div>
-
-        <ion-item routerLink="bonus-cards" class="ion-margin-top">
-          <div>
-            <ion-label translate>bonus-cards</ion-label>
-            <ion-note translate [translateParams]="{ num: setup.bonusCards.length }">bonus-cards-description</ion-note>
-          </div>
-          <input type="hidden" name="bonusCards" [(ngModel)]="setup.bonusCards" appSelectedMinimumValidator
-            [minimum]="setup.numPlayers + 3" #bonusCardsSelect="ngModel">
-        </ion-item>
-        <div class="ion-padding-horizontal">
-          <ion-text *ngIf="bonusCardsSelect.errors?.invalidMinimum" color="danger" translate>
-            bonus-cards-invalid
-          </ion-text>
-        </div>
-
-        <ion-item routerLink="scoring-tiles" class="ion-margin-top">
-          <div>
-            <ion-label translate>scoring-tiles</ion-label>
-            <ion-note translate [translateParams]="{ num: setup.scoringTiles.length }">scoring-tiles-description
-            </ion-note>
-          </div>
-          <input type="hidden" name="scoringTiles" [(ngModel)]="setup.scoringTiles" appScoringTilesValidator
-            [allowTownScoring1stRound]="setup.allowTownScoring1stRound" #scoringTilesSelect="ngModel">
-        </ion-item>
-        <div class="ion-padding-horizontal">
-          <ion-text *ngIf="scoringTilesSelect.errors?.invalidScoringTiles" color="danger" translate>
-            scoring-tiles-invalid
-          </ion-text>
-        </div>
-
-        <ion-item class="ion-margin-top">
-          <div>
-            <ion-label translate>allow-town-scoring-1st-round</ion-label>
-            <ion-note translate>allow-town-scoring-1st-round-description</ion-note>
-          </div>
-          <ion-checkbox name="allowTownScoring1stRound" [(ngModel)]="setup.allowTownScoring1stRound"
-            (ionChange)="onAllowTownScoring1stRoundChange()" slot="end"></ion-checkbox>
-        </ion-item>
-
-        <ion-item routerLink="extra-final-scoring-tiles" class="ion-margin-top">
-          <div>
-            <ion-label translate>extra-final-scoring-tiles</ion-label>
-            <ion-note translate [translateParams]="{ num: setup.extraFinalScoringTiles.length }">
-              extra-final-scoring-tiles-description
-            </ion-note>
-          </div>
-        </ion-item>
-
-        <ion-item routerLink="game-boards" class="ion-margin-top">
-          <div>
-            <ion-label translate>game-boards</ion-label>
-            <ion-note translate [translateParams]="{ num: setup.gameBoards.length }">game-boards-description
-            </ion-note>
-          </div>
-          <input type="hidden" name="gameBoards" [(ngModel)]="setup.gameBoards" appSelectedMinimumValidator
-            [minimum]="1" #gameBoardsSelect="ngModel">
-        </ion-item>
-        <div class="ion-padding-horizontal">
-          <ion-text *ngIf="gameBoardsSelect.errors?.invalidMinimum" color="danger" translate>
-            game-boards-invalid
-          </ion-text>
-        </div>
-      </ion-item-group>
-
+      <app-game-setup-options [profile]="profile"></app-game-setup-options>
       <ion-button routerLink="setup" [state]="{ validated: form.valid }" [disabled]="!form.valid" class="ion-margin-top"
-        translate>generate-setup
-      </ion-button>
+        translate>generate-setup</ion-button>
     </form>
   </ion-list>
-
 </ion-content>
-
-<ng-template #scoringTileTemplate let-item="item">
-  <ion-label>
-    <div>
-      <p>
-        <ion-text><strong translate>action-phase-scoring</strong>
-          <span translate> {{item.actionPhaseScoring}}</span>
-        </ion-text>
-      </p>
-      <p>
-        <ion-text><strong translate>end-round-reward</strong>
-          <span translate [translateParams]="{ count: item.endRoundRewardConditionCount }">
-            {{item.endRoundRewardCondition}}</span>
-          <span translate [translateParams]="{ count: item.endRoundRewardCount }">
-            {{item.endRoundReward}}</span>
-        </ion-text>
-      </p>
-    </div>
-  </ion-label>
-</ng-template>
