--- a/src/app/shared/components/game-setup-options/game-setup-options.component.html
+++ b/src/app/shared/components/game-setup-options/game-setup-options.component.html
@@ -32,17 +32,17 @@
     <ion-label translate>setup</ion-label>
   </ion-item-divider>
 
-  <ion-radio-group name="factionSelectMode" [(ngModel)]="setup.factionSelectMode">
+  <ion-radio-group name="factionPickMode" [(ngModel)]="setup.factionPickMode">
     <ion-item lines="none">
-      <ion-label style="min-width: 140px;" translate>faction-select-mode</ion-label>
+      <ion-label style="min-width: 140px;" translate>faction-pick-mode</ion-label>
       <div class="single-line">
         <ion-item>
-          <ion-label translate>faction-select-mode.bid</ion-label>
-          <ion-radio slot="start" value="faction-select-mode.bid"></ion-radio>
+          <ion-label translate>faction-pick-mode.bid</ion-label>
+          <ion-radio slot="start" value="faction-pick-mode.bid"></ion-radio>
         </ion-item>
         <ion-item>
-          <ion-label translate>faction-select-mode.two-alternatives</ion-label>
-          <ion-radio slot="start" value="faction-select-mode.two-alternatives"></ion-radio>
+          <ion-label translate>faction-pick-mode.two-alternatives</ion-label>
+          <ion-radio slot="start" value="faction-pick-mode.two-alternatives"></ion-radio>
         </ion-item>
       </div>
     </ion-item>
