--- a/src/app/pages/new-game/generate-setup/generate-setup.page.html
+++ b/src/app/pages/new-game/generate-setup/generate-setup.page.html
@@ -69,7 +69,7 @@
       </ion-item-divider>
       <ion-row *ngFor="let scoringTile of pickedScoringTiles; let i = index">
         <ion-col size="auto">
-          <ion-label color="medium"><strong translate [translateParams]="{ num: i }">round-num</strong></ion-label>
+          <ion-label color="medium"><strong translate [translateParams]="{ num: i + 1 }">round-num</strong></ion-label>
         </ion-col>
         <ion-col>
           <ion-item>
